-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.1.1
-
None
-
1061c7e5cfae88a336f1327cc20b2d8a0a3c6015
The following code works in QtQuick 1.1 (4.8) but not in QtQuick 2.0 (5.1)
import QtQuick 2.1 ListView { width: 400 height: 400 focus: true model: 100 delegate: Text { text: modelData } highlight: Rectangle { width: ListView.view.width color: "yellow" } }
untitled.qml:13:26: TypeError: Result of expression is not an object